--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -22,6 +22,9 @@
     border-radius: 0.75rem;
     text-align: center;
     padding: 1rem 1.25rem;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
 }
 .about__icon{
     font-size: 1.5rem;
@@ -90,3 +93,4 @@
     transition: 0.3s;
     color: white;
   }
+
