--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -3,8 +3,10 @@
     position: fixed;
     top: 0;
     left: 0;
+    padding: 20px;
     z-index: var(--z-fixed);
     background-color: var(--body-color);
+    
 }
 .nav{
     height: calc(var(--header-height)+1.5rem);
@@ -13,10 +15,20 @@
     align-items: center;
     column-gap: 1rem;
 }
-.nav__logo, .nav__toggle{
+.nav__logo, 
+.nav__toggle{
     color: var(--title-color);
     font-weight: var(--font-medium);
 }
+
+.logo_link {
+    color: transparent;
+    font-size: var(--h1-font-size);
+    font-weight: var(--font-semi-bold);
+    letter-spacing: 2px;
+    -webkit-text-stroke: 1px var(--title-color);
+}
+
 .nav__list{
     display: flex;
     column-gap: 2rem;
@@ -25,7 +37,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size: var(--small-font-size);
+    font-size: var(--normal-font-size);
     color: var(--title-color);
     font-weight: var(--font-medium);
     transition: .5s;
@@ -38,7 +50,7 @@
 /* ACTIVE LINK */
 .active-link,
 .nav__link:hover{
-    color: rgb(255, 30, 0);
+    color: rgb(255, 255, 255);
 }
 
 .scroll-header{
@@ -46,11 +58,18 @@
 }
 
 
+@media screen and (min-width: 769px) and (max-width: 1920px) {
+    .header {
+        background: #00000006;
+        backdrop-filter: blur(20px);
+    }
+}
 
 @media screen and (max-width: 768px) {
     .header{
         top: initial;
         bottom: 0;
+        background: rgba(0, 0, 0, 0.878);
     }
     .nav{
         height: var(--header-height);
@@ -63,7 +82,7 @@
         width:100%;
         background-color: var(--body-color);
         padding: 2rem 1.5rem 4rem;
-        box-shadow: 0 -1px 4px rgba(0,0,0,0.15);
+        box-shadow: 0 -1px 4px rgb(255, 255, 255);
         border-radius:1.5rem 1.5rem 0 0 ;
         transition: 0,5s;
     }
