--- a/src/components/qualifications/qualifications.css
+++ b/src/components/qualifications/qualifications.css
@@ -64,6 +64,16 @@
     font-size: var(--small-font-size);
 }
 
+.qualification_location {
+    color: white;
+    transition: .4s;
+    cursor: pointer;
+}
+
+.qualification_location:hover {
+    color: aqua;
+}
+
 .qualification__rounder{
     display: inline-block;
     width: 13px;
